--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "dependencies": {
     "async": "^3.2.0",
     "cookie-parser": "~1.4.4",
+    "date-fns": "^2.22.1",
     "debug": "~2.6.9",
     "express": "~4.16.1",
     "hbs": "^4.1.2",
