--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "date-fns": "^2.22.1",
     "debug": "~2.6.9",
     "express": "~4.16.1",
+    "express-validator": "^6.11.1",
     "hbs": "^4.1.2",
     "http-errors": "~1.6.3",
     "mongoose": "^5.12.11",
