--- a/package.json
+++ b/package.json
@@ -1,6 +1,9 @@
 {
   "name": "express-local-library",
   "version": "0.0.0",
+  "engines": {
+    "node": "15.10.0"
+  },
   "private": true,
   "scripts": {
     "start": "node ./bin/www",
@@ -8,12 +11,14 @@
   },
   "dependencies": {
     "async": "^3.2.0",
+    "compression": "^1.7.4",
     "cookie-parser": "~1.4.4",
     "date-fns": "^2.22.1",
     "debug": "~2.6.9",
     "express": "~4.16.1",
     "express-validator": "^6.11.1",
     "hbs": "^4.1.2",
+    "helmet": "^4.6.0",
     "http-errors": "~1.6.3",
     "mongoose": "^5.12.11",
     "morgan": "~1.9.1"
